--- a/src/app/ui/dashboard/sidebar/dashboard.module.css
+++ b/src/app/ui/dashboard/sidebar/dashboard.module.css
@@ -5,8 +5,10 @@
 .menu {
     flex: 1;
     background-color: var(--bgSoft);
+    padding: 20px;
 }
 
 .content {
     flex: 4;
+    padding: 20px;
 }
