--- a/src/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/src/app/ui/dashboard/sidebar/sidebar.module.css
@@ -3,3 +3,28 @@
     top: 40px;
 }
 
+.user {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px; 
+}
+
+.userImage {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.userDetail {
+    display: flex;
+    flex-direction: column;
+}
+
+.username {
+    font-weight: 500;
+}
+
+.userTitle {
+    font-size: 12px;
+    color: var(--textSoft);
+}
