--- a/src/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/src/app/ui/dashboard/sidebar/sidebar.module.css
@@ -28,3 +28,14 @@
     font-size: 12px;
     color: var(--textSoft);
 }
+
+.list {
+    list-style: none;
+}
+
+.cat {
+    color: var(--textSoft);
+    font-weight: bold;
+    font-size: 13px;
+    margin: 10px 0px;
+}
