--- a/src/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
+++ b/src/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
@@ -3,6 +3,8 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    margin: 5px 0px;
+    border-radius: 10px;
 }
 
 .container:hover, .active {
