--- a/src/app/ui/dashboard/navbar/navbar.module.css
+++ b/src/app/ui/dashboard/navbar/navbar.module.css
@@ -1,3 +1,8 @@
 .container {
-    
+    padding: 20px;
+    border-radius: 10px;
+    background-color: var(--bgSoft);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
