Added search functionality and new icons to Navbar nd style for title and menu

--- a/src/app/ui/dashboard/navbar/navbar.module.css
+++ b/src/app/ui/dashboard/navbar/navbar.module.css
@@ -6,3 +6,15 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.title {
+    color: var(--textSoft);
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+  
+  .menu {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
