--- a/src/app/ui/dashboard/navbar/navbar.module.css
+++ b/src/app/ui/dashboard/navbar/navbar.module.css
@@ -18,3 +18,23 @@
     align-items: center;
     gap: 20px;
   }
+  
+  .search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #2e374a;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  
+  .input {
+    background-color: transparent;
+    border: none;
+    color: var(--text);
+  }
+  
+  .icons{
+    display: flex;
+    gap: 20px;
+  }
